# AGA-Codebase

./: CMakeLists.txt  documentation.md  main.cc  modified_codes.md
include/: Algorithm.h  ClassificationList.h  GraphDefs.h  GraphReader.h  GraphReaderAlt.h  NetworkBuilder.h  PreferenceList.h  TDefs.h  Vertex.h
lib/: Algorithm.cc  CMakeLists.txt  ClassificationList.cc  GraphDefs.cc  GraphReader.cc  GraphReaderAlt.cc  NetworkBuilder.cc  PreferenceList.cc  Vertex.cc
resources/input/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input28.txt  input29.txt  input30.txt  input31.txt  input32.txt  input33.txt  input34.txt  input35.txt  input36.txt  input37.txt  input38.txt  input39.txt  input40.txt  (+59 more)
resources/output/: output00.txt  output01.txt  output02.txt  output03.txt  output04.txt  output06.txt  output07.txt  output08.txt  output09.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt  (+60 more)
test/: CMakeLists.txt
